fix mobile menu overflow

--- a/assets/scss/components/_mobile_nav.scss
+++ b/assets/scss/components/_mobile_nav.scss
@@ -36,6 +36,9 @@
       overflow-y: auto;
   
       .menu-content-inner-wrapper{
+
+        //hide sub menu
+        overflow-x: clip;
   
         
         padding-bottom: 7em;
